# opens-ecu

./: .gitignore  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
data/: vetable.csv
main/: CMakeLists.txt  cmd_decl.h  ecm_controls.c  includes.h
main/lib/calculations/: calc.c  calc.h
main/lib/cmd_file/: cmd_file.c  cmd_file.h
main/lib/cmd_wifi/: cmd_wifi.c  cmd_wifi.h
main/lib/console/: cons.c  cons.h
main/lib/peripherals/: perinit.c  perinit.h
main/lib/sntp/: sntp.c  sntp.h
main/lib/spiffsVFS/: spiffsVFS.c  spiffsVFS.h
